# uavtrans

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: experiment.yaml
docs/: UDST_DESIGN.md  UDST_PAPER_OUTLINE.md
result/atc/: deo_rd_sweep_events.csv  deo_rd_sweep_summary.csv  jpeg_payload_sweep_events.csv  jpeg_payload_sweep_summary.csv  rd_sweep_all_tables.xlsx
results/exp_synthetic/: channel_simulation_summary.csv  improvement_ratios.csv  selected_level_distribution.csv
scripts/: generate_synthetic_dataset.py  plot_udst_results.py  prepare_generic_mask_dataset.py  profile_edge.py  run_ablation.py  run_experiment.py  run_level3_experiment.py  run_udst_experiment.py  train_crack_segmenter.py
src/videc_uw/: channel.py  cloud_verification.py  degradation.py  evidence.py  jetson_profile.py  level3.py  neural_segmenter.py  plots.py  scheduler.py  segmenter.py  simulate.py  statistics.py  udst_transmission.py  uncertainty.py  verification.py
tests/: test_channel.py  test_verification.py
