[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "videc-uw"
version = "0.1.0"
description = "Verification-driven evidence transmission simulator for underwater AUV inspection"
readme = "README.md"
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["src"]
